--- a/site-cookbooks/sites/templates/default/pages/factorio.html.erb
+++ b/site-cookbooks/sites/templates/default/pages/factorio.html.erb
@@ -40,7 +40,7 @@
   </tr>
   <tr>
     <td>基礎バージョン</td>
-    <td>0.12.19</td>
+    <td><%= node['factorio']['version'] %></td>
   </tr>
   </tbody>
 </table>
