--- a/site-cookbooks/sites/templates/default/conf/squid.conf.erb
+++ b/site-cookbooks/sites/templates/default/conf/squid.conf.erb
@@ -16,8 +16,8 @@ server {
   # ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
   ssl_ciphers 'ECDHE+RSAGCM:ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:!aNULL:!eNULL:!LOW:!EXPORT:!DES:!3DES:!MD5:!EXP:!PSK:!SRP:!DSS';
   ssl_dhparam /etc/nginx/ssl/dhparam.pem;
-  ssl_certificate /etc/letsencrypt/live/dolpen.net/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/dolpen.net/privkey.pem;
+  ssl_certificate /etc/letsencrypt/live/squid.dolpen.net/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/squid.dolpen.net/privkey.pem;
   ssl_session_cache shared:SSL:10m;
   ssl_session_timeout 10m;
   ssl_stapling on;
