いろいろ拡張

--- a/site-cookbooks/minecraft/templates/default/server.properties.erb
+++ b/site-cookbooks/minecraft/templates/default/server.properties.erb
@@ -3,7 +3,7 @@ max-tick-time=0
 generator-settings=
 force-gamemode=false
 allow-nether=true
-gamemode=0
+gamemode=<%= node['minecraft']['gamemode'] %>
 enable-query=false
 player-idle-timeout=0
 difficulty=1
