mcserver status checker

--- a/site-cookbooks/minecraft/templates/default/server.properties.erb
+++ b/site-cookbooks/minecraft/templates/default/server.properties.erb
@@ -4,7 +4,7 @@ generator-settings=
 force-gamemode=false
 allow-nether=true
 gamemode=<%= node['minecraft']['gamemode'] %>
-enable-query=false
+enable-query=true
 player-idle-timeout=0
 difficulty=1
 spawn-monsters=true
